# evie

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/: commit  pr
.claude/skills/commit/: SKILL.md  commit.sh
.claude/skills/pr/: SKILL.md  pr.sh
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: model-design.md  tokenization.md  training-pipeline.md
docs/decisions/: template.md
docs/learnings/: debugging.md  hyperparameters.md  scaling-laws.md
docs/training/: datasets.md  evaluation.md  strategy.md
src/evie/: __init__.py
src/evie/models/: __init__.py  transformer.py
tests/evie/: __init__.py
tests/evie/models/: __init__.py  test_transformer.py
