[project]
name = "evie"
version = "0.1.0"
description = "LLM training framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = [
    "ERA", "YTT", "ANN", "ASYNC", "S", "FBT", "B", "A", "COM", "C4", "DTZ",
    "EM", "EXE", "FIX", "FA", "INT", "ISC", "ICN", "INP", "PIE", "T20", "PYI",
    "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC", "ARG", "PTH",
    "FLY", "I", "N", "PERF", "E", "W", "DOC", "D", "F", "PL", "UP", "FURB",
    "RUF", "TRY",
]
extend-ignore = [
    "ANN002", "COM812", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "PLR0904", "PLR0913", "S311", "PLR0914", "PLR0911", "ANN401", "PLR0912",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "D103", "PLC2701", "PLR2004", "DOC", "SLF001", "PLR6301"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
pythonPlatform = "Linux"
